{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 9,
  "lineage": "65168b5c-36b6-4ebc-9056-66990c361381",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:internet-gateway/igw-0dea5cf6eddb6f3f7",
            "id": "igw-0dea5cf6eddb6f3f7",
            "owner_id": "754683575807",
            "tags": {
              "Name": "tf-vpc-igw"
            },
            "tags_all": {
              "Name": "tf-vpc-igw"
            },
            "vpc_id": "vpc-00d5fe67f2f24199f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:route-table/rtb-082f81cdf39d8fdb8",
            "id": "rtb-082f81cdf39d8fdb8",
            "owner_id": "754683575807",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dea5cf6eddb6f3f7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-vpc-pub-rt"
            },
            "tags_all": {
              "Name": "tf-vpc-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d5fe67f2f24199f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sn_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b176e21a525cecf2",
            "route_table_id": "rtb-082f81cdf39d8fdb8",
            "subnet_id": "subnet-0288c70e5c458aa15"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub",
            "aws_subnet.pub_sn",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016cddc0644b53211",
            "route_table_id": "rtb-082f81cdf39d8fdb8",
            "subnet_id": "subnet-088282d67e8a9fca9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub",
            "aws_subnet.pub_sn",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:security-group/sg-0b333452cc5aea4d4",
            "description": "Security group for web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Out-bound Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b333452cc5aea4d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web Security Group",
            "name_prefix": "",
            "owner_id": "754683575807",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebServer SecurityGroup"
            },
            "tags_all": {
              "Name": "WebServer SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d5fe67f2f24199f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:subnet/subnet-0288c70e5c458aa15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0288c70e5c458aa15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "754683575807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-vpc-pub-sn-1"
            },
            "tags_all": {
              "Name": "tf-vpc-pub-sn-1"
            },
            "vpc_id": "vpc-00d5fe67f2f24199f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:subnet/subnet-088282d67e8a9fca9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088282d67e8a9fca9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "754683575807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-vpc-pub-sn-2"
            },
            "tags_all": {
              "Name": "tf-vpc-pub-sn-2"
            },
            "vpc_id": "vpc-00d5fe67f2f24199f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:vpc/vpc-00d5fe67f2f24199f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a7e180f8e9181960",
            "default_route_table_id": "rtb-071f66d522020efb2",
            "default_security_group_id": "sg-0e49c709c859effd6",
            "dhcp_options_id": "dopt-0dd1978d061ca8554",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d5fe67f2f24199f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071f66d522020efb2",
            "owner_id": "754683575807",
            "tags": {
              "Name": "tf-vpc"
            },
            "tags_all": {
              "Name": "tf-vpc"
            }
          }
        }
      ]
    }
  ]
}